# demo

./: .gitignore  .gitmodules  .secrets.env  Dockerfile  Makefile  README.md
docs/: WSGI_Notes.md
images/demo/: .gitignore  Makefile
images/demo/src/apache2/: httpd.conf  portfolio.conf
images/demo_cpp/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
images/demo_cpp/src/: SharedLock.cpp  main.cpp
images/demo_cpp/src/home/kevin/server/src/: Makefile
images/demo_java/: .gitignore  Dockerfile  Dockerfile.compose  Makefile  README.md
images/demo_java/src/MyApp/: HelloWorld.java
images/demo_java/src/YourWebApp/: HelloWorld.java
images/demo_mariadb/: .gitignore  Dockerfile  Makefile
images/demo_nodejs/: Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
images/demo_nodejs/src/: server.ts
images/demo_ui/: .gitignore  Dockerfile  Makefile
images/demo_ui/apps/animation/: .gitignore  Makefile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
images/demo_ui/apps/homepage/: Makefile
images/demo_ui/apps/playground/: .gitignore  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
images/demo_ui/apps/spreadsheet/: Makefile
images/demo_ui/apps/spreadsheet_ts/: Makefile  package-lock.json  (+4 more)
src/: backupSQL.sh  docker-compose.env  docker-compose.yaml  restoreSQL.sh
src/docker/: demo_version.txt  docker-compose.env  image_versions.ish
src/front/: index.html
src/front/src/: App.jsx
src/www/html/: index.html  test_php.php
(+160 files in other folders)
